Fix invisible cards issue.

--- a/less/app.less
+++ b/less/app.less
@@ -286,7 +286,6 @@ fieldset{
   display: inline-block;
   height: 150px;
   width: 150px;
-  opacity: 0;
   margin: 0 35px 40px 0;
   // -moz-box-sizing: border-box;
   //      box-sizing: border-box;
@@ -304,9 +303,8 @@ fieldset{
 }
 
 .footprint div:hover {
-  .translate(-3px, -10px);
-  // .translate(0, -3px);
   box-shadow: 1px 8px 4px rgba(0,0,0,.5);
+  .translate(-3px, -10px);
   .transition(.2s);
 }
 
